--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       <p>
         Learn more about Git in the
         <a href="https://git-scm.com/book/en/v2">official docs</a> or
-        <a href="https://acad.link/git">our course</a>.
+        <a href="https://acad.link/git">our course</a>
+        <a href="https://acad.link/git"> !!! No novo-branch-checking-out</a>.
       </p>
     </main>
   </body>
