--- a/index.html
+++ b/index.html
@@ -4,23 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Git & GitHub Crash Course</title>
+    <title>Git & GitHub Crash Course - AQUI NO MASTER !!!</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header>
-      <img id="logo" src="logo.png" alt="A logo that contains the word 'Git'" />
-      <h1>Git & GitHub Crash Course</h1>
-    </header>
-    <main>
-      <p>Because the basics are important!</p>
-      <p>
-        Learn more about Git in the
-        <a href="https://git-scm.com/book/en/v2">official docs</a> or
-        <a href="https://acad.link/git">our course</a>
-        <a href="https://acad.link/git"> !!! No novo-branch-checking-out</a>.
-      </p>
-    </main>
+    <img id="logo" src="logo.png" alt="A logo that contains the word 'Git'" />
+    <h1>Git & GitHub Crash Course</h1>
+    <p>AQUI NO RAMO 01</p>
   </body>
 </html>
-
