meu commit das 15:24

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <img id="logo" src="logo.png" alt="A logo that contains the word 'Git'" />
     <h1>Git & GitHub Crash Course</h1>
     <p>Alteração das 15:11</p>
+    <p>Alteração das 15:21</p>
   </body>
 </html>
